@@ -1,5 +1,12 @@
 2000-09-19  Radek Doulik  <rodo@helixcode.com>
 
+	* htmlgdkpainter.c (draw_text): use unicode_strlen
+	instead of strlen
+
+	* htmlengine-edit-insert.c (html_engine_insert): use unicode_strlen
+	instead of strlen
+	(do_insert): updated to utf8
+
 	* htmlgdkpainter.c (draw_spell_error): fixed off/len calculation
 
 	* htmlclueflow.c (spell_check_word_mark): use unicode_strlen
